# TransparentEmail

./: LICENSE  README.md  pyproject.toml
tests/: .coveralls.yml  test_transparentemail.py
transparentemail/: src.py
transparentemail/services/: __init__.py  gmailCom.py  outlookCom.py  serviceEmail.py  www33MailCom.py  yahooCom.py
transparentemail/services/Emails/: editableEmail.py  email.py  emailException.py
