[tool.poetry]
name = "TransparentEmail"
version = "0.1.1"
description = "Transparent Email clears aliases from email address"
authors = ["Akash Gupta"]
readme = 'README.md'

repository = "https://github.com/akash-codes93/TransparentEmail"
homepage = "https://github.com/akash-codes93/TransparentEmail"

keywords = ['transparentemail', 'email alias', 'email']

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
